--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@ body {
 </style>
 </head>
 <body>
-<img height="100%" width="100%" src="https://media.giphy.com/media/Bb9lbKryRmkY8/giphy.gif">
+<img height="1000px" width="1000px" src="https://media.giphy.com/media/Bb9lbKryRmkY8/giphy.gif">
 </body>
 </html>
