--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@ body {
 </style>
 </head>
 <body>
-<img height="500px" width="500px" src="https://media.giphy.com/media/Bb9lbKryRmkY8/giphy.gif">
+<img height="750px" width="750px" src="https://media.giphy.com/media/Bb9lbKryRmkY8/giphy.gif" align="center">
 </body>
 </html>
