--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@ PURE CSS TOTALLY
 </title>
 <style>
 body {
-  background-color:black
+  background-color:black;
 }
+  
+img {
+      display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
 </style>
 </head>
 <body>
-<img height="750px" width="750px" src="https://media.giphy.com/media/Bb9lbKryRmkY8/giphy.gif" align="center">
+<img height="750px" width="750px" src="https://media.giphy.com/media/Bb9lbKryRmkY8/giphy.gif">
 </body>
 </html>
